# fun

./: CMakeLists.txt  CTestConfig.cmake  README.md
app/src/: main.cpp
coliru/: cordic.cpp  ell.cpp  intersect2.cpp  knapsack.cpp  main_max_plus.cpp  max_plus.hpp  sweep.cpp  sweep2.cpp  sweep3.cpp
doc/: Doxyfile
doc/doxygen/: Doxyfile.in  customdoxygen.css
include/: GF.hpp  cline.hpp  concept_test.hpp  conic3.hpp  cpoint.hpp  line3.hpp  line3d.hpp  main_geom.cpp  matrix2.hpp  matrix2d.hpp  matrix3.hpp  matrix3d.hpp  notes  pg_line.hpp  pg_main.cpp  pg_point_new.hpp  point2.hpp  proj_geom.cpp  proj_geom.hpp  rat.hpp  rat_t.cpp  rational.hpp  test.hpp  test_pg_main.cpp  testset.cpp  vector3.hpp  vector3d_new.hpp  vector_space_t.cpp
lib/include/fun/: ck_geom.hpp  common_concepts.hpp  concept_test.hpp  line3.hpp  matrix3.hpp  pg_point.hpp  point2.hpp  point2d.hpp  point3.hpp  point3d.hpp  point4.hpp  proj_xform.hpp  vector2.hpp  vector2d.hpp  vector3d.hpp
mvc/: a.out
src/: CMakeLists.txt
src/cppunit/: CMakeLists.txt  Main.cpp  cline_t.cpp  cline_t.hpp  line3_t.cpp  line3_t.hpp  matrix2_t.cpp  matrix2_t.hpp  matrix3_t.cpp  matrix3_t.hpp  point2_t.cpp  point2_t.hpp  point3_t.cpp  point3_t.hpp  test.cpp  vector2_t.cpp  vector2_t.hpp  vector3_t.cpp  vector3_t.hpp
src/proj_geom/: CMakeLists.txt  conic.cpp
